--- a/frontend/src/styles/app-style.css
+++ b/frontend/src/styles/app-style.css
@@ -18,7 +18,7 @@ body {
   --tp-active-plan-border: #b99df7;
   --tp-requirement-fill-start: #dff6b4;
   --tp-requirement-fill-end: #e1ff9a;
-  --tp-requirement-text: #0da745;
+  --tp-requirement-text: #247427;
   --tp-accent: #4a1f87;
 }
 h1,
